<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.actsgi.btc.TsActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">
        <include
            android:id="@+id/toolbar_main"
            layout="@layout/toolbar_layout" />


    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:id="@+id/faq"
                android:background="@color/colorWindowUpper"
                android:orientation="horizontal"
                android:layout_marginBottom="1dp">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="24dp"
                    app:srcCompat="@drawable/ic_faq"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:maxLines="1"
                    android:ellipsize="end"
                    style="@style/TextAppearance.AppCompat.Menu"
                    android:text="@string/faq"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:id="@+id/privacy"
                android:background="@color/colorWindowUpper"
                android:orientation="horizontal"
                android:layout_marginBottom="1dp">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="24dp"
                    app:srcCompat="@drawable/ic_policy"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:maxLines="1"
                    android:ellipsize="end"
                    style="@style/TextAppearance.AppCompat.Menu"
                    android:text="@string/privacy_policy"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@color/colorWindowUpper"
                android:orientation="horizontal"
                android:id="@+id/mailSupport"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="24dp"
                    app:srcCompat="@drawable/ic_email"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:maxLines="1"
                    android:ellipsize="end"
                    style="@style/TextAppearance.AppCompat.Menu"
                    android:text="@string/e_mail"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@color/colorWindowUpper"
                android:orientation="horizontal"
                android:layout_marginBottom="1dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Menu"
                    android:text="@string/app_version"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:id="@+id/version"
                        android:text="1.0.0"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@color/colorWindowUpper"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Menu"
                    android:text="@string/push_messages"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:text="@string/enable_disable_notifications"/>
                </LinearLayout>
                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sw"
                    android:checked="true"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@color/colorWindowUpper"
                android:orientation="horizontal"
                android:layout_marginBottom="1dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Menu"
                    android:text="@string/cache_used"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:id="@+id/cache"
                    android:text="~"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/info"
                />



        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
