<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <include
            android:id="@+id/toolbar_transaction"
            layout="@layout/toolbar_layout" />


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_marginBottom="@dimen/banner_margin"
        android:layout_marginTop="?attr/actionBarSize">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardView.MyStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/stbg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/ic_txn_pending" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <ImageView
                        android:id="@+id/sticon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        app:srcCompat="@drawable/ic_pending" />

                    <TextView
                        android:id="@+id/status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Pending"
                        style="@style/TextAppearance.AppCompat.Button"
                        android:textAllCaps="true"
                        android:textSize="16dp" />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/default_value"
                    style="@style/TextAppearance.AppCompat.Title" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="requested on"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/created"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        style="@style/TextAppearance.AppCompat.Caption"
                        android:paddingBottom="5dp"/>






            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorWindow"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"

                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="15dp">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="5dp"
                            android:text="@string/claimed"
                            style="@style/TextAppearance.AppCompat.Caption" />


                        <TextView
                            android:id="@+id/txnClaimed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="3dp"
                            android:text="@string/default_value"
                            style="@style/TextAppearance.AppCompat.Subhead" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        app:srcCompat="@drawable/ic_touch_app_white_24px" />
                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorWindow"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="15dp">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="5dp"
                            android:text="@string/referred"
                            style="@style/TextAppearance.AppCompat.Caption" />

                        <TextView
                            android:id="@+id/txnReferral"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="3dp"
                            android:text="@string/default_value"
                            style="@style/TextAppearance.AppCompat.Subhead" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        app:srcCompat="@drawable/ic_person_add_white_24px" />
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorWindow"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet"
                    style="@style/TextAppearance.AppCompat.Caption" />

                <TextView
                    android:id="@+id/txnWallet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    style="@style/TextAppearance.AppCompat.Body2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/successBtn"
                    android:layout_width="wrap_content"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPink"
                    android:text="@string/view_in_blockchain" />
                <TextView
                    android:id="@+id/errorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:visibility="gone"
                    android:textColor="@color/colorRed" />
            </LinearLayout>


        </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center|bottom"
        app:adSize="BANNER"
        app:adUnitId="@string/admob_banner">
    </com.google.android.gms.ads.AdView>
</android.support.design.widget.CoordinatorLayout>